--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </div>
                 <div class="project-col-right">
                     <div class="project-col-right-wrapper">
-                        <img class="project-website-image website-img-2" src="/images/community-science-museum.jpeg"
+                        <img class="project-website-image website-img-2" src="/images/community-science-museum.png"
                             alt="screenshot of community science museum website">
                     </div>
                 </div>
