--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="main-container">
                 <h2 class="hello-text">hello</h2>
 
-                <img class="astronaut" src="/images/astronaut.png" alt="">
+                <img class="astronaut" src="images/astronaut.png" alt="">
 
                 <div class="main-text-wrapper">
                 <h2 class="main-text-mobile">I'm learning odyssey of coding</h2>
@@ -89,7 +89,7 @@
                             </div>
                         </div>
                         <div class="button-wrapper">
-                            <a class="website-link" href="https://cocky-joliot-3fe24d.netlify.app/">Link to website
+                            <a class="website-link" href="https://rainydays-portfolio.netlify.app/">Link to website
                                 raniydays</a>
                             <button class="btn" id="btn1">Report1</button>
                         </div>
@@ -97,7 +97,7 @@
                 </div>
                 <div class="project-col-right">
                     <div class="project-col-right-wrapper">
-                        <img class="project-website-image website-img-1" src="/images/rainydays.jpeg"
+                        <img class="project-website-image website-img-1" src="images/rainydays.jpeg"
                             alt="screenshot of rainydays website">
                     </div>
                     <div class="cover-image"></div>
@@ -135,7 +135,7 @@
                             </div>
                         </div>
                         <div class="button-wrapper">
-                            <a class="website-link" href="https://adoring-davinci-ea49f5.netlify.app/">Link to
+                            <a class="website-link" href="https://community-science-museum-portfolio.netlify.app/">Link to
                                 website</a>
                             <button class="btn" id="btn2">Report2</button>
                         </div>
@@ -143,7 +143,7 @@
                 </div>
                 <div class="project-col-right">
                     <div class="project-col-right-wrapper">
-                        <img class="project-website-image website-img-2" src="/images/community-science-museum.png"
+                        <img class="project-website-image website-img-2" src="images/community-science-museum.png"
                             alt="screenshot of community science museum website">
                     </div>
                 </div>
@@ -167,14 +167,14 @@
                             </div>
                         </div>
                         <div class="button-wrapper">
-                            <a class="website-link" href="https://epic-sound.netlify.app/">Link to website</a>
+                            <a class="website-link" href="https://epic-sound-portfolio2.netlify.app/">Link to website</a>
                             <button class="btn" id="btn3">Report3</button>
                         </div>
                     </div>
                 </div>
                 <div class="project-col-right">
                     <div class="project-col-right-wrapper">
-                        <img class="project-website-image website-img-3" src="/images/epic-sound.jpeg"
+                        <img class="project-website-image website-img-3" src="images/epic-sound.jpeg"
                             alt="screenshot of epic sound website">
                     </div>
                 </div>
