--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             </div>
                         </div>
                         <div class="button-wrapper">
-                            <a class="website-link" href="https://rainydays-portfolio.netlify.app/">Link to website
+                            <a class="website-link" href="https://rainydays-portfolio.netlify.app/" target="_blank">Link to website
                                 raniydays</a>
                             <button class="btn" id="btn1">Report1</button>
                         </div>
@@ -135,7 +135,7 @@
                             </div>
                         </div>
                         <div class="button-wrapper">
-                            <a class="website-link" href="https://community-science-museum-portfolio.netlify.app/">Link to
+                            <a class="website-link" href="https://community-science-museum-portfolio.netlify.app/" target="_blank">Link to
                                 website</a>
                             <button class="btn" id="btn2">Report2</button>
                         </div>
@@ -167,7 +167,7 @@
                             </div>
                         </div>
                         <div class="button-wrapper">
-                            <a class="website-link" href="https://epic-sound-portfolio2.netlify.app/">Link to website</a>
+                            <a class="website-link" href="https://epic-sound-portfolio2.netlify.app/" target="_blank">Link to website</a>
                             <button class="btn" id="btn3">Report3</button>
                         </div>
                     </div>
