--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <img class="astronaut" src="images/astronaut.png" alt="">
 
                 <div class="main-text-wrapper">
-                <h2 class="main-text-mobile">I'm learning odyssey of coding</h2>
+                <h2 class="main-text-mobile">I'm stepping in to the coding space</h2>
                 </div>
             </div>
         </section>
@@ -63,26 +63,26 @@
                             <p class="project-text-report">I keep all images below 200kb to speed up page load time. I
                                 used the <a class="raport-link" href="https://tinypng.com/" target="_blank">tinypng</a> tool.</p>
                             <h4 class="project-report-header">User feedback</h4>
-                            <p class="project-text-report">I added popup feedback when a product is added to cart.</p>
+                            <p class="project-text-report">I added popup feedback for when a product is added to cart.</p>
                             <h4 class="project-report-header">Products page</h4>
                             <p class="project-text-report">I added text information “more detail”. When entering the
                                 products page, and selecting a jacket the user is directed to a jacket specific page
                                 where the user can see more information on the product.</p>
-                            <h4 class="project-report-header">Change display items of nav menu</h4>
-                            <p class="project-text-report">Now the current/active menu item is underline so user exactly
-                                know on which page he is.</p>
+                            <h4 class="project-report-header">Change display items of navigation menu</h4>
+                            <p class="project-text-report">Now the current/active menu item is underlined so the user knows exactly
+                                 which page he is on.</p>
                             <h4 class="project-report-header">Replace div to main element </h4>
-                            <p class="project-text-report">To keep HTML document consistent and organized I replaced div
+                            <p class="project-text-report">To keep the HTML document consistent and organized I replaced div
                                 with class wrapper to main element.</p>
                             <h4 class="project-report-header">Order in the main folder</h4>
                             <p class="project-text-report">I deleted old and unnecessary files.</p>
                             <h4 class="project-report-header">Display block</h4>
                             <p class="project-text-report">Set headers display block rather to use "br" HTML tag To
-                                break headers, I used display block. ffffff</p>
+                                break headers, I used display block.</p>
                             <h4 class="project-report-header">Remove console.logs</h4>
-                            <p class="project-text-report">To neaten up my JavaScript I removed the console.logs.
-                                They're useful while testing, but once finished I can make my files easier to read by
-                                removing them. vvvvvvvv</p>
+                            <p class="project-text-report">To tidy up my JavaScript, I removed the console.logs. The console logs are useful
+                                while testing, but once finished it makes my files easier to read by removing them.
+                                Writing to the console log can also slow things down.</p>
 
                             <div class="close-text-wrapper">
                                 <p class="close-text" id="btn4">close</p>
@@ -117,9 +117,9 @@
                         <div class="project-text-cover">
                             <h3 class="project-name-header">Report</h3>
                             <h4 class="project-report-header">More space</h4>
-                            <p class="project-text-report">I removed image from hero section and made about text bigger that’s makes website brighter.</p>
+                            <p class="project-text-report">I removed image from hero section and replace it with slider. This makes website brighter.</p>
                             <h4 class="project-report-header">Change colors</h4>
-                            <p class="project-text-report">I changed header colors and added colorful images for kids to make website brighter and more interesting for younger audience </p>
+                            <p class="project-text-report">I changed header colors and added colorful images for kids. This makes website brighter and more interesting to younger audience </p>
                             <h4 class="project-report-header">Fix links to IDs with fixed header </h4>
                             <p class="project-text-report">To fix this problem I set scroll-margin-top with value 6vh. Now when the browser jumps to the anchor links it will leave margin of 6vh on the top.</p>
                             <h4 class="project-report-header">Change the file path</h4>
@@ -127,7 +127,7 @@
                             <h4 class="project-report-header">Unique title per page</h4>
                             <p class="project-text-report">I made all the titles unique for each page. This improves SEO as well as improves the user's experience as they can look in the browser tab and see what page they're on.</p>
                             <h4 class="project-report-header">Fix images</h4>
-                            <p class="project-text-report">Some of images in exhibition space were overflow I needed to use overflow hidden.</p>
+                            <p class="project-text-report">Some of images in exhibition space were overflow. To solve this, I needed to use overflow hidden.</p>
                             <h4 class="project-report-header">Bigger view of exhibition space images</h4>
                             <p class="project-text-report">When a user clicks on an image in exhibition space, a modal should appear giving the user a bigger view of that image.</p>
                             <div class="close-text-wrapper">
@@ -186,7 +186,7 @@
             <div class="about-wrapper">
                 <h2 class="about-header">ABOUT</h2>
                 <p class="about-text">I am currently studying websites designing at the Noroff school.
-                    In my free time I like to cut and glue samples
+                    In my free time I like to cut and stretch samples.
                     I use HTML, CSS, and JavaScript to produce responsive websites and web apps that provide users the
                     best and most appropriate experience suited to their device and browser.
                 </p>
@@ -196,13 +196,6 @@
     <footer>
         <p class="footer-text">&copy; all rights reserved</p>
     </footer>
-
-
-
-
-
-
-
     <script src="/main.js"></script>
 </body>
 
