--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
                             </div>
                         </div>
                         <div class="button-wrapper">
-                            <a class="website-link" href="https://rainydays-portfolio.netlify.app/" target="_blank">Link to website
-                                raniydays</a>
+                            <a class="website-link" href="https://rainydays-portfolio.netlify.app/" target="_blank">Link to website</a>
                             <button class="btn" id="btn1">Report1</button>
                         </div>
                     </div>
